[package]
description = "Standard for representing Move types (`MoveType`) off-chain and their type tags."
name        = "af-move-type"
version     = "0.18.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--generate-link-to-definition" cargo doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
]

[lints]
workspace = true

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
af-sui-types = { version = "0.18.0", public = true, features = ["u256"], path = "../af-sui-types" }
bcs          = { version = "0.1", public = true }
serde_json   = { version = "1", public = true }

af-move-type-derive = { version = "0.5.0", path = "../af-move-type-derive" }

derive-where  = "1"
derive_more   = { version = "2", features = ["deref", "deref_mut", "from", "into"] }
serde         = "1"
serde_with    = "3"
sui-sdk-types = { version = "0.3", public = true }
tabled        = "0.20"
thiserror     = "2"
