[package]
description = "Sui GraphQL RPC client by Aftermath using `cynic`"
name        = "sui-gql-client"
version     = "0.23.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[features]
move-type = ["dep:af-move-type", "dep:bcs", "queries"]
mutations = ["dep:af-sui-types", "dep:sui-sdk-types", "scalars"]
queries = [
  "dep:af-sui-types",
  "dep:async-stream",
  "dep:bimap",
  "dep:enum-as-inner",
  "dep:futures",
  "dep:futures-core",
  "dep:graphql-extract",
  "dep:itertools",
  "scalars",
]
raw = ["dep:serde_json"]
reqwest = ["cynic/http-reqwest", "dep:reqwest", "raw"]
scalars = ["sui-gql-schema/scalars"]


[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
# FIXME: this is in dire need of refactoring; see
# https://github.com/AftermathFinance/aftermath-sdk-rust/issues/181
af-move-type = { version = "0.16.0", public = true, optional = true, path = "../af-move-type" }
af-sui-types = { version = "0.16.0", public = true, path = "../af-sui-types", features = [
  "hash",
], optional = true }
bimap = { version = "0.6", public = true, optional = true }
cynic = { version = "3", public = true }
enum-as-inner = { version = "0.6", optional = true }
futures-core = { version = "0.3", public = true, optional = true }
reqwest = { version = "0.12", public = true, default-features = false, optional = true }
serde = { version = "1", public = true }
serde_json = { version = "1", public = true, optional = true }
sui-gql-schema = { version = "0.15.0", public = true, default-features = false, path = "../sui-gql-schema" }
sui-sdk-types = { version = "0.1", public = true, features = ["hash"], optional = true }

graphql-extract = { version = "0.0.11", path = "../graphql-extract", optional = true }

clap             = { version = "4", features = ["derive"] }
derive_more      = { version = "2", features = ["display"] }
extension-traits = "2"
tap              = "1"
thiserror        = "2"
trait-variant    = "0.1"

# For stream queries
async-stream = { version = "0.3", optional = true }
futures      = { version = "0.3", optional = true }

# For pre-made queries (optional)
itertools = { version = "0.14", optional = true }

# MoveType compat (optional)
bcs = { version = "0.1", optional = true }


[build-dependencies.sui-gql-schema]
default-features = false
features         = ["build"]
path             = "../sui-gql-schema"
version          = "0.15.0"


[dev-dependencies]
bcs        = "0.1"
clap       = { version = "4", features = ["derive"] }
color-eyre = "0.6"
indicatif  = "0.17"
insta      = "1"
rand       = "0.9"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
tokio-test = "0.4"

af-sui-types   = { path = "../af-sui-types" }
sui-gql-schema = { path = "../sui-gql-schema", features = ["build", "scalars"] }


[[example]]
name              = "gql-object-type"
path              = "examples/object_type.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-object-dfs"
path              = "examples/object_dfs.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-object-df-by-name"
path              = "examples/object_df_by_name.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-object-dof-by-name"
path              = "examples/object_dof_by_name.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-current-epoch"
path              = "examples/current_epoch.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-events-backward"
path              = "examples/events_backward.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-cached"
path              = "examples/cached_client.rs"
required-features = ["queries", "reqwest"]

# [[example]]
# name              = "gql-transaction-status"
# path              = "examples/transaction_blocks_status.rs"
# required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-latest-checkpoint"
path              = "examples/latest_checkpoint.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-full-objects"
path              = "examples/full_objects.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-latest-full-objects"
path              = "examples/latest_full_objects.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-packages"
path              = "examples/packages.rs"
required-features = ["queries", "reqwest"]

[[example]]
name              = "gql-transactions-by-digests"
path              = "examples/transactions_by_digests.rs"
required-features = ["hash", "queries", "reqwest"]

[[example]]
name              = "gql-coin-metadata"
path              = "examples/coin_metadata.rs"
required-features = ["queries", "reqwest"]
