[package]
description = "Sui GraphQL RPC client by Aftermath using `cynic`"
name        = "sui-gql-client"
version     = "0.25.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true


[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
# FIXME: this is in dire need of refactoring; see
# https://github.com/AftermathFinance/aftermath-sdk-rust/issues/181
af-move-type = { version = "0.17.0", public = true, path = "../af-move-type" }
af-sui-types = { version = "0.17.0", public = true, path = "../af-sui-types", features = ["hash"] }
bimap = { version = "0.6", public = true }
cynic = { version = "3", public = true, features = ["http-reqwest"] }
enum-as-inner = { version = "0.6" }
futures-core = { version = "0.3", public = true }
reqwest = { version = "0.12", public = true, default-features = false }
serde = { version = "1", public = true }
serde_json = { version = "1", public = true }
sui-framework-sdk = { version = "0.16", path = "../sui-framework-sdk" }
sui-gql-schema = { version = "0.17.0", public = true, default-features = false, path = "../sui-gql-schema", features = [
  "scalars",
] }
sui-sdk-types = { version = "0.2", public = true, features = ["hash"] }

graphql-extract = { version = "0.0.11", path = "../graphql-extract" }

async-stream     = { version = "0.3" }
bcs              = { version = "0.1" }
clap             = { version = "4", features = ["derive"] }
derive_more      = { version = "2", features = ["display"] }
extension-traits = "2"
futures          = { version = "0.3" }
itertools        = { version = "0.14" }
tap              = "1"
thiserror        = "2"
trait-variant    = "0.1"


[build-dependencies.sui-gql-schema]
default-features = false
features         = ["build"]
path             = "../sui-gql-schema"
version          = "0.17.0"


[dev-dependencies]
bcs        = "0.1"
clap       = { version = "4", features = ["derive"] }
color-eyre = "0.6"
indicatif  = "0.17"
insta      = "1"
rand       = "0.9"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
tokio-test = "0.4"

af-sui-types   = { path = "../af-sui-types" }
sui-gql-schema = { path = "../sui-gql-schema", features = ["build", "scalars"] }


[[example]]
name = "gql-object-type"
path = "examples/object_type.rs"

[[example]]
name = "gql-object-dfs"
path = "examples/object_dfs.rs"

[[example]]
name = "gql-object-df-by-name"
path = "examples/object_df_by_name.rs"

[[example]]
name = "gql-object-dof-by-name"
path = "examples/object_dof_by_name.rs"

[[example]]
name = "gql-current-epoch"
path = "examples/current_epoch.rs"

[[example]]
name = "gql-events-backward"
path = "examples/events_backward.rs"

[[example]]
name = "gql-cached"
path = "examples/cached_client.rs"

[[example]]
name = "gql-transaction-status"
path = "examples/transaction_blocks_status.rs"

[[example]]
name = "gql-latest-checkpoint"
path = "examples/latest_checkpoint.rs"

[[example]]
name = "gql-full-objects"
path = "examples/full_objects.rs"

[[example]]
name = "gql-latest-full-objects"
path = "examples/latest_full_objects.rs"

[[example]]
name = "gql-owner-gas-coins"
path = "examples/owner_gas_coins.rs"

[[example]]
name = "gql-packages"
path = "examples/packages.rs"

[[example]]
name = "gql-transactions-by-digests"
path = "examples/transactions_by_digests.rs"

[[example]]
name = "gql-coin-metadata"
path = "examples/coin_metadata.rs"
